--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
         </section>
 
-        <p><b>Jorge Luis Uceta Familia, jorgeuz01@hotmail.com y <a href="https://fantastic-sfogliatella-4b171c.netlify.app">repositorio</a> de la persona que lo realizo</b></p>
+        <p><b>Jorge Luis Uceta Familia, jorgeuz01@hotmail.com y <a href="https://fantastic-sfogliatella-4b171c.netlify.app">repositorio</a> y mi contacto (809) 777-5787</b></p>
     </footer>
     
 </body>
