--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             </g>
                         </g>
                     </svg>
-                    STORE
+                   <a href="#home">STORE</a>
                 </a>
             </div>
             <div class="container__menu">
